stacks/network/wireguard/ingress-routes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vpn-wireguard-dashboard
  namespace: starsys-network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vpn.cluster.starsystem.dev`)
      kind: Rule
      services:
        - name: vpn-wireguard
          port: 51821
#      middlewares:
#        - name: authelia@kubernetescrd
